# network_programming_hands_on

problem_sets/: 1_link_layer.md
socket_programming/simple_tcp_client_and_server/python/: README.md  client.py  server.py
solutions/python/: pyproject.toml
solutions/python/link_layer/ethernet_client_server/: client.py  connect_hosts.py  create_virtual_host.py  server.py  utils.py
solutions/python/link_layer/mac_addresses/: utils.py
solutions/python/working_with_bytes/: solution.py
