[tool.poetry]
name = "network_programming_hands_on"
version = "0.1.0"
description = ""
authors = ["Kanyinsola Sagoe <ksagoe@gmail.com>"]
readme = "README.md"
packages = [
    { include = "link_layer" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
black = "*"
flake8-import-order = "*"
mypy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"